fixed the ul navigation bar by using flexbox to wrap the ul content so that it does not overflow to the right side of the screen on small screens.

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ nav > ul{
     padding-inline-start: 0;
     margin-block: 0;
     height: 100%;
+    flex-wrap:wrap;
 }
 
 h1,h2{
